--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,15 @@
       <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="theme-color" content="#000000" />
+      <meta
+         http-equiv="Content-Security-Policy"
+         content="default-src 'self' data:gap: http://www.visitsingapore.com 
+  https://ssl.gstatic.com 'unsafe-eval';
+  style-src 'self' 'unsafe-inline';
+  media-src *;
+  script-src 'sha256-V+/U3qbjHKP0SaNQhMwYNm62gfWX4QHwPJ7We1PXokI='
+"
+      />
       <link
          rel="stylesheet"
          type="text/css"
