--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,15 +5,7 @@
       <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="theme-color" content="#000000" />
-      <meta
-         http-equiv="Content-Security-Policy"
-         content="default-src 'self' data:gap: http://www.visitsingapore.com 
-  https://ssl.gstatic.com 'unsafe-eval';
-  style-src 'self' 'unsafe-inline';
-  media-src *;
-  script-src 'sha256-V+/U3qbjHKP0SaNQhMwYNm62gfWX4QHwPJ7We1PXokI='
-"
-      />
+
       <link
          rel="stylesheet"
          type="text/css"
@@ -44,7 +36,17 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
+      
     -->
+      <!-- <meta
+         http-equiv="Content-Security-Policy"
+         content="default-src 'self' data:gap: http://www.visitsingapore.com 
+https://ssl.gstatic.com 'unsafe-eval';
+style-src 'self' 'unsafe-inline';
+media-src *;
+script-src 'sha256-V+/U3qbjHKP0SaNQhMwYNm62gfWX4QHwPJ7We1PXokI='
+"
+      /> -->
       <title>DhauPasal</title>
    </head>
    <body>
