--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,9 +7,7 @@
       <meta name="theme-color" content="#000000" />
       <meta
          http-equiv="Content-Security-Policy"
-         content="default-src *;
-      img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *;
-      style-src  'self' 'unsafe-inline' *"
+         content="default-src * 'unsafe-inline' 'unsafe-eval' 'self'; script-src * 'unsafe-inline' 'unsafe-eval' blob:; img-src * 'self' data: blob:;"
       />
       <link
          rel="stylesheet"
